# Fractionax

./: .env.example  README.md  chromatic.config.json  components.json  drizzle.config.ts  eslint.config.mjs  middleware.tsx  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
.storybook/: main.tsx  manager.tsx  preview.tsx  vitest.setup.tsx
abi/: index.ts
app/: default.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  sitemap.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/dashboard/: page.tsx
app/(misc)/welcome/: page.tsx
app/(owners)/asset-listing/: page.tsx
app/(root)/: page.tsx
app/(root)/demo/: page.tsx
app/(root)/docs/: page.tsx
app/(root)/insights/: page.tsx
app/(root)/tutorials/: page.tsx
app/about/: page.tsx
app/academy/: page.tsx
app/api/interest/: route.tsx
app/com/: page.tsx
app/contact/: page.tsx
app/listing/: page.tsx
components/: theme-provider.tsx
components/ui/: badge.tsx  button.tsx  dialog.tsx  dynamic-image.tsx  form.tsx  input.tsx  label.tsx  mouse-scroll.tsx  scroll-area.tsx  select.tsx  table.tsx
content/general/: general.tsx  nav.tsx  terms.json
contracts/: ERC3643.sol
db/: drizzle.tsx  index.tsx  schema.tsx
hooks/: useClientMount.tsx
lib/: edgestore.tsx  font.tsx  utils.ts  utils.tsx  versions.tsx
lib/interface/: sitemap.tsx
locales/: en.tsx
programs/erc3643-anchor/: Cargo.toml
programs/erc3643-anchor/src/: error.rs  events.rs  lib.rs  utils.rs
programs/erc3643-anchor/src/instructions/: admin.rs  compliance.rs  identity.rs  initialize_token.rs  mod.rs  token.rs
programs/erc3643-anchor/src/state/: claims.rs  compliance.rs  config.rs  identity.rs  mod.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
stories/example/: Configure.mdx
types/: general.tsx  listing.tsx
(+58 files in other folders)
