[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer hook program for ERC-3643 compliance enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.0"
spl-tlv-account-resolution = "0.6.0"
spl-type-length-value = "0.4.0"
arrayref = "0.3.7"
solana-program = "~1.18.0"
borsh = "0.10.3"
erc3643-anchor = { path = "../erc3643-anchor", features = ["cpi"] }
